Since 0.4.2
-----------
- Pinned chrono to >= 0.4.20.
  See [RUSTSEC](https://rustsec.org/advisories/RUSTSEC-2020-0159.html) for further information

- insert!
  - Added `.return_nothing()` and `.return_primary_key()`
  - Defaults to returning whole model instead of primary key
  - Updated `insert!`'s docs

- update!
  - Added convenience method `set_if` when builder is in dyn mode

- delete!
  - condition is now added last and executes the query similar to insert!'s
    behaviour

- Removed `.transaction(...)` methods
  The transaction reference is now passed directly to the macro instead of a
  database reference.

- Nicer field types
  - Put `ForeignModel` and `BackRef` into public module `fields`
  - Added `MsgPack<T>` and `Json<T>` wrapper types
  - Made `DateTime<Utc>` a valid field type
  - Made `Uuid` a valid field type

- Made `ForeignModel`'s and `BackRef`'s generic parameter to take the related field

- Replaced `.fields()` method on FieldProxys with an equivalent `Deref` impl

- `BackRef`'s populate functions take a generic `Executor` instead of `Database`

- Conditions can own values
  - i.e. we use Cows now
  - restricted IntoSingleValue to `Vec`/`String` and `&[u8]`/`&str`

- Refactored annotations
- Error when `max_length` is missing
- Major refactor of internals

- Added feature `cli`, which exposes `rorm-cli` as library

Notes for publishing
--------------------
- don't forget to bump and publish rorm-macro!